--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
+.env
+
 # Created by https://www.toptal.com/developers/gitignore/api/go,visualstudiocode,windows,macos,linux,goland+all
 # Edit at https://www.toptal.com/developers/gitignore?templates=go,visualstudiocode,windows,macos,linux,goland+all
 
