add docker compose; fix env var

--- a/.env.example
+++ b/.env.example
@@ -1,9 +1,12 @@
+# Service configurations
+PORT=8080
+
 # PostgreSQL credentials
 POSTGRES_HOST=postgres
 POSTGRES_PORT=5432
 POSTGRES_USER=dummyuser
 POSTGRES_PASSWORD=
-POSTGRES_DATABASE_NAME=
+POSTGRES_DB=
 
 # Database configurations
 DATABASE_MAX_LIFE_TIME=30 # in seconds
