--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -10,7 +10,7 @@ services:
       POSTGRES_PASSWORD: "dummypassword"
       POSTGRES_DB: "dummydb"
     volumes:
-      - "pg_data:/var/lib/postgresql"
+      - "pg-data:/var/lib/postgresql"
   golang:
     build: "."
     ports:
