--- a/.editorconfig
+++ b/.editorconfig
@@ -3,6 +3,10 @@ root = true
 [*]
 insert_final_newline = true
 
+[*.yaml]
+indent_size = 2
+indent_style = space
+
 [*.go]
 indent_size = 8
 indent_style = tab
