--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -6,13 +6,15 @@ services:
     ports:
       - "5432:5432"
     environment:
-      POSTGRES_USER: "dummyuser"
-      POSTGRES_PASSWORD: "dummypassword"
-      POSTGRES_DB: "dummydb"
+      - POSTGRES_USER=${POSTGRES_USER}
+      - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
+      - POSTGRES_DB=${POSTGRES_DB}
     volumes:
       - "pg-data:/var/lib/postgresql/data"
   golang:
     build: "."
+    depends_on:
+      - postgres
     ports:
       - "8080:8080"
     env_file:
